@@ -1,7 +1,7 @@
 SUBDIRS = init
 
 confdir = $(sysconfdir)/lightdm
-dist_conf_DATA = lightdm.conf users.conf
+dist_conf_DATA = lightdm.conf users.conf keys.conf
 
 dbusconfdir = $(sysconfdir)/dbus-1/system.d
 dist_dbusconf_DATA = org.freedesktop.DisplayManager.conf
