@@ -1,0 +1,3 @@
+[keyring]
+#a=0x0123456789ABCD
+#b=secret
