@@ -37,7 +37,7 @@ seats=Seat0
 # autologin-user-timeout = Number of seconds to wait before loading default user
 # xdmcp-manager = XDMCP manager to connect to
 # xdmcp-port = XDMCP UDP/IP port to communicate on
-# xdmcp-key = Authentication key to use for XDM-AUTHENTICATION-1
+# xdmcp-key = Authentication key to use for XDM-AUTHENTICATION-1 (stored in keys.conf)
 #
 [SeatDefaults]
 #xserver-command=X
@@ -55,7 +55,7 @@ seats=Seat0
 #autologin-user-timeout=0
 #xdmcp-manager=
 #xdmcp-port=177
-#xdmcp-key=0x0123456789ABCD
+#xdmcp-key=
 
 #
 # Seat configuration
@@ -83,7 +83,7 @@ seats=Seat0
 #
 # enabled = True if XDMCP connections should be allowed
 # port = UDP/IP port to listen for connections on
-# key = Authentication key to use for XDM-AUTHENTICATION-1 or blank to not use authentication
+# key = Authentication key to use for XDM-AUTHENTICATION-1 or blank to not use authentication (stored in keys.conf)
 #
 # The authentication key is a 56 bit DES key specified in hex as 0xnnnnnnnnnnnnnn.  Alternatively
 # it can be a word and the first 7 characters are used as the key.
@@ -91,4 +91,4 @@ seats=Seat0
 [XDMCPServer]
 #enabled=false
 #port=177
-#key=0x0123456789ABCD
+#key=
